# quant-research-mcp

./: .dockerignore  .gitignore  .mcp.json.example  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  manifest.json  pyproject.toml  server.json  server.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_method.md
.github/rulesets/: main-protection.json  tag-protection.json
.github/workflows/: ci.yml  docker.yml  release.yml
evals/: evaluation.xml
quant_research_mcp/: __init__.py  backtest.py  cache.py  config.py  data.py  decision.py  formatting.py  indicators.py  market.py  portfolio.py  screener.py  server.py
quant_research_mcp/methods/: __init__.py  base.py  donchian_trend.py  hurst_regime.py  pairs_cointegration.py  rsi2_reversion.py  xs_momentum.py
quant_research_mcp/providers/: __init__.py  base.py  yfinance_provider.py
tests/: conftest.py  test_backtest.py  test_decision.py  test_indicators.py  test_methods.py  test_portfolio.py
