[project]
name = "quant-research-mcp"
version = "0.1.0"
description = "An extensible MCP server: a registry of paper-backed quantitative trading methods plus a deterministic, no-LLM decision helper. Research tooling only — not financial advice."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "FlawlessByte" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "trading",
    "quantitative-finance",
    "backtesting",
    "technical-analysis",
    "llm-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "lxml>=6.1.1",
    "mcp[cli]>=1.27.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "statsmodels>=0.14.6",
    "yfinance>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/FlawlessByte/quant-research-mcp"
Repository = "https://github.com/FlawlessByte/quant-research-mcp"
Issues = "https://github.com/FlawlessByte/quant-research-mcp/issues"

[project.scripts]
quant-research-mcp = "quant_research_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_research_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length is enforced by the formatter, not the linter
    "UP042",  # keep (str, Enum) — StrEnum changes str() output / schema serialization
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# Methods are imported after the registry is defined so they can self-register.
"quant_research_mcp/methods/__init__.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
